feat: login dan activation and get me by token by middleware auth handle
