# src/routes/api.ts
@@ -1,6 +1,7 @@
 import express from 'express';
 import dummyController from '../controllers/dummy.controller';
 import authController from '../controllers/auth.controller';
+import authMiddleware from '../middleware/auth.middleware';
 
 const router = express.Router();
 
@@ -36,6 +37,31 @@ router.post("/auth/activation", authController.activation
           }
         }
       }
+    */
+);
+
+router.post("/auth/login", authController.login
+    /*
+      #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+        required: true,
+        content: {
+          "application/json": {
+            schema: {
+              $ref: "#/components/schemas/LoginRequest"
+            }
+          }
+        }
+      }
+    */
+);
+
+router.get("/auth/me", authMiddleware, authController.me
+    /*
+      #swagger.tags = ["Auth"]
+      #swagger.security = [{
+        "bearerAuth" : []
+      }]
     */
 );
 
